--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.6",
+    "mongodb": "^6.3.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "react": "^18",
