--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^2.0.6",
-    "mongodb": "^6.3.0",
+    "@auth/mongodb-adapter": "^2.0.7",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "mongodb": "^5.0.0",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "react": "^18",
