--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/mongodb-adapter": "^2.0.7",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "mongodb": "^5.0.0",
+    "mongoose": "^8.0.2",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "react": "^18",
